--- a/DueTax1/DueTax1.csproj
+++ b/DueTax1/DueTax1.csproj
@@ -52,7 +52,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaxServicesTests.cs" />
+    <Compile Include="TaxServicesCargoTests.cs" />
+    <Compile Include="TaxServiceFamilyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevOceanSpaceTax\DevOceanSpaceTax.csproj">
